--- a/app/src/main/res/layout/activity_careplan1.xml
+++ b/app/src/main/res/layout/activity_careplan1.xml
@@ -23,109 +23,127 @@
         android:id="@+id/checkBox4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Self-care"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="494dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
 
     <CheckBox
         android:id="@+id/checkBox5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Shopping"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="494dp" />
+        app:layout_constraintStart_toStartOf="@+id/checkBox2"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
 
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Activities"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="446dp" />
+        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
+        app:layout_constraintStart_toEndOf="@+id/checkBox"
+        app:layout_constraintTop_toTopOf="@+id/checkBox" />
 
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:text="Walking"
-        tools:layout_editor_absoluteX="267dp"
-        tools:layout_editor_absoluteY="446dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/checkBox2" />
 
     <RadioButton
         android:id="@+id/radioButton8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:text="NA"
-        tools:layout_editor_absoluteX="287dp"
-        tools:layout_editor_absoluteY="349dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/radioButton7" />
 
     <RadioButton
         android:id="@+id/radioButton7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="349dp" />
+        app:layout_constraintEnd_toStartOf="@+id/radioButton8"
+        app:layout_constraintStart_toEndOf="@+id/radioButton6"
+        app:layout_constraintTop_toTopOf="@+id/radioButton6" />
 
     <RadioButton
         android:id="@+id/radioButton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Yes"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="349dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <RadioButton
         android:id="@+id/radioButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hospital"
-        tools:layout_editor_absoluteX="226dp"
-        tools:layout_editor_absoluteY="248dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/radioButton"
+        app:layout_constraintTop_toTopOf="@+id/radioButton" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="250dp"
         android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
         android:text="2.Nutrition and Hydration:"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="300dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="250dp"
         android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
         android:text="3.Support requirements:"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="403dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton6" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="250dp"
         android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
         android:text="4.Diet timings:"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="551dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="133dp"
         android:layout_height="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
         android:text="1.Care Plan Type:"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="204dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView5"
@@ -178,50 +196,58 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
         android:text="Care Plan"
         android:textColor="@color/black"
         android:textSize="18dp"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="144dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerCard" />
 
     <RadioButton
         android:id="@+id/radioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Home"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="248dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Self-care"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="446dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <RadioButton
         android:id="@+id/radioButton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Breakfast – 8am"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="581dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <RadioButton
         android:id="@+id/radioButton9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Lunch – 12pm"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="613dp" />
+        app:layout_constraintStart_toStartOf="@+id/radioButton5"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />
 
     <RadioButton
         android:id="@+id/radioButton10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Supper – 6pm"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="645dp" />
+        app:layout_constraintStart_toStartOf="@+id/radioButton9"
+        app:layout_constraintTop_toBottomOf="@+id/radioButton9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
