--- a/app/src/main/res/layout/patient_list_for_caretaker.xml
+++ b/app/src/main/res/layout/patient_list_for_caretaker.xml
@@ -73,53 +73,36 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_editor_absoluteX="134dp" />
 
-            <ImageView
-                android:id="@+id/imageView48"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.21"
-                app:srcCompat="@drawable/rectangle_18161"
-                tools:layout_editor_absoluteX="16dp" />
+            <SearchView
+                android:id="@+id/searchView"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:background="@drawable/white_rectangle_patient_list"
+                android:iconifiedByDefault="false"
+                android:queryHint="Search patients or others"
 
-            <TextView
-                android:id="@+id/placeholder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
-                android:fontFamily="sans-serif-black"
-                android:text="Search patients or others"
-                android:translationZ="2dp"
-                app:layout_constraintTop_toTopOf="@+id/imageView48"
-                tools:layout_editor_absoluteX="98dp" />
+                tools:layout_editor_absoluteX="20dp"
+                tools:layout_editor_absoluteY="146dp" />
+
 
             <ImageView
                 android:id="@+id/imageView70"
                 android:layout_width="26dp"
                 android:layout_height="31dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="@+id/imageView48"
+                app:layout_constraintTop_toTopOf="@+id/searchView"
                 app:srcCompat="@drawable/right_vector"
                 tools:layout_editor_absoluteX="337dp" />
 
-            <ImageView
-                android:id="@+id/imageView63"
-                android:layout_width="35dp"
-                android:layout_height="33dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="@+id/imageView48"
-                app:srcCompat="@drawable/search_icon"
-                tools:layout_editor_absoluteX="41dp" />
 
             <ImageView
                 android:id="@+id/imageView49"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:background="@drawable/white_rectangle_patient_list"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView48"
+                app:layout_constraintTop_toTopOf="@+id/searchView"
                 app:layout_constraintVertical_bias="0.138"
-                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -128,7 +111,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
-                android:text="Patients Overiew"
+                android:text="Patients Overview"
+                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView49"
                 tools:layout_editor_absoluteX="98dp" />
@@ -153,21 +137,22 @@
 
             <ImageView
                 android:id="@+id/imageView50"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:background="@drawable/white_rectangle_patient_list"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView49"
                 app:layout_constraintVertical_bias="0.157"
-                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
                 android:id="@+id/placeholder3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="23dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 1"
+                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView50"
                 tools:layout_editor_absoluteX="98dp" />
@@ -192,12 +177,12 @@
 
             <ImageView
                 android:id="@+id/imageView51"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:background="@drawable/white_rectangle_patient_list"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView50"
                 app:layout_constraintVertical_bias="0.19"
-                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -207,6 +192,7 @@
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 2"
+                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView51"
                 tools:layout_editor_absoluteX="98dp" />
@@ -226,25 +212,26 @@
                 android:layout_height="33dp"
                 app:srcCompat="@drawable/red_circle"
                 tools:layout_editor_absoluteX="41dp"
-                tools:layout_editor_absoluteY="369dp" />
+                tools:layout_editor_absoluteY="375dp" />
 
             <ImageView
                 android:id="@+id/imageView52"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:background="@drawable/white_rectangle_patient_list"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView51"
                 app:layout_constraintVertical_bias="0.235"
-                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
                 android:id="@+id/placeholder5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="28dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 3"
+                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toBottomOf="@+id/imageView51"
                 tools:layout_editor_absoluteX="98dp" />
@@ -269,12 +256,12 @@
 
             <ImageView
                 android:id="@+id/imageView53"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:background="@drawable/white_rectangle_patient_list"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView52"
                 app:layout_constraintVertical_bias="0.307"
-                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -284,6 +271,7 @@
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 4"
+                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView53"
                 tools:layout_editor_absoluteX="98dp" />
@@ -308,12 +296,12 @@
 
             <ImageView
                 android:id="@+id/imageView54"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:background="@drawable/white_rectangle_patient_list"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView53"
                 app:layout_constraintVertical_bias="0.444"
-                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -323,6 +311,7 @@
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 5"
+                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView54"
                 tools:layout_editor_absoluteX="98dp" />
