--- a/app/src/main/res/layout/activity_patient_page_new.xml
+++ b/app/src/main/res/layout/activity_patient_page_new.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/patient_profile_bg"
+    android:background="@drawable/L1111"
     tools:context=".view.patient.Patient_Page">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="@null"
+            android:background="#"
             android:text="Marilyn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -132,7 +132,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="@null"
+            android:background="#"
             android:text="None"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -164,7 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="@null"
+            android:background="#"
             android:inputType="textMultiLine"
             android:text="Bvarton"
             app:layout_constraintStart_toStartOf="parent"
@@ -194,7 +194,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="@null"
+            android:background="#"
             android:text="6/5/1980"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />
@@ -223,7 +223,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="@null"
+            android:background="#"
             android:inputType="textMultiLine"
             android:text="5065521796"
             app:layout_constraintStart_toStartOf="parent"
@@ -253,7 +253,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="@null"
+            android:background="#"
             android:backgroundTint="#ECECEC"
             android:text="L67M8OB004HQ"
             app:layout_constraintStart_toStartOf="parent"
