--- a/app/src/main/res/layout/patient_list_for_caretaker.xml
+++ b/app/src/main/res/layout/patient_list_for_caretaker.xml
@@ -73,36 +73,53 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_editor_absoluteX="134dp" />
 
-            <SearchView
-                android:id="@+id/searchView"
-                android:layout_width="375dp"
-                android:layout_height="64dp"
-                android:background="@drawable/white_rectangle_patient_list"
-                android:iconifiedByDefault="false"
-                android:queryHint="Search patients or others"
+            <ImageView
+                android:id="@+id/imageView48"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.21"
+                app:srcCompat="@drawable/rectangle_18161"
+                tools:layout_editor_absoluteX="16dp" />
 
-                tools:layout_editor_absoluteX="20dp"
-                tools:layout_editor_absoluteY="146dp" />
-
+            <TextView
+                android:id="@+id/placeholder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="21dp"
+                android:fontFamily="sans-serif-black"
+                android:text="Search patients or others"
+                android:translationZ="2dp"
+                app:layout_constraintTop_toTopOf="@+id/imageView48"
+                tools:layout_editor_absoluteX="98dp" />
 
             <ImageView
                 android:id="@+id/imageView70"
                 android:layout_width="26dp"
                 android:layout_height="31dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="@+id/searchView"
+                app:layout_constraintTop_toTopOf="@+id/imageView48"
                 app:srcCompat="@drawable/right_vector"
                 tools:layout_editor_absoluteX="337dp" />
 
+            <ImageView
+                android:id="@+id/imageView63"
+                android:layout_width="35dp"
+                android:layout_height="33dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="@+id/imageView48"
+                app:srcCompat="@drawable/search_icon"
+                tools:layout_editor_absoluteX="41dp" />
 
             <ImageView
                 android:id="@+id/imageView49"
-                android:layout_width="375dp"
-                android:layout_height="64dp"
-                android:background="@drawable/white_rectangle_patient_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/searchView"
+                app:layout_constraintTop_toTopOf="@+id/imageView48"
                 app:layout_constraintVertical_bias="0.138"
+                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -111,8 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
-                android:text="Patients Overview"
-                android:textColor="@color/black"
+                android:text="Patients Overiew"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView49"
                 tools:layout_editor_absoluteX="98dp" />
@@ -137,22 +153,21 @@
 
             <ImageView
                 android:id="@+id/imageView50"
-                android:layout_width="375dp"
-                android:layout_height="64dp"
-                android:background="@drawable/white_rectangle_patient_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView49"
                 app:layout_constraintVertical_bias="0.157"
+                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
                 android:id="@+id/placeholder3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="23dp"
+                android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 1"
-                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView50"
                 tools:layout_editor_absoluteX="98dp" />
@@ -177,12 +192,12 @@
 
             <ImageView
                 android:id="@+id/imageView51"
-                android:layout_width="375dp"
-                android:layout_height="64dp"
-                android:background="@drawable/white_rectangle_patient_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView50"
                 app:layout_constraintVertical_bias="0.19"
+                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -192,7 +207,6 @@
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 2"
-                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView51"
                 tools:layout_editor_absoluteX="98dp" />
@@ -212,26 +226,25 @@
                 android:layout_height="33dp"
                 app:srcCompat="@drawable/red_circle"
                 tools:layout_editor_absoluteX="41dp"
-                tools:layout_editor_absoluteY="375dp" />
+                tools:layout_editor_absoluteY="369dp" />
 
             <ImageView
                 android:id="@+id/imageView52"
-                android:layout_width="375dp"
-                android:layout_height="64dp"
-                android:background="@drawable/white_rectangle_patient_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView51"
                 app:layout_constraintVertical_bias="0.235"
+                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
                 android:id="@+id/placeholder5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 3"
-                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toBottomOf="@+id/imageView51"
                 tools:layout_editor_absoluteX="98dp" />
@@ -256,12 +269,12 @@
 
             <ImageView
                 android:id="@+id/imageView53"
-                android:layout_width="375dp"
-                android:layout_height="64dp"
-                android:background="@drawable/white_rectangle_patient_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView52"
                 app:layout_constraintVertical_bias="0.307"
+                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -271,7 +284,6 @@
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 4"
-                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView53"
                 tools:layout_editor_absoluteX="98dp" />
@@ -296,12 +308,12 @@
 
             <ImageView
                 android:id="@+id/imageView54"
-                android:layout_width="375dp"
-                android:layout_height="64dp"
-                android:background="@drawable/white_rectangle_patient_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView53"
                 app:layout_constraintVertical_bias="0.444"
+                app:srcCompat="@drawable/rectangle_18161"
                 tools:layout_editor_absoluteX="16dp" />
 
             <TextView
@@ -311,7 +323,6 @@
                 android:layout_marginTop="21dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Patient name 5"
-                android:textColor="@color/black"
                 android:translationZ="2dp"
                 app:layout_constraintTop_toTopOf="@+id/imageView54"
                 tools:layout_editor_absoluteX="98dp" />
